// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BasicView Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: gray;"
        >
          <div
            class="MuiBox-root MuiBox-root-160"
          >
            <div
              class="MuiBox-root MuiBox-root-161"
            >
              <div
                class="div-root-162"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    Looks like you're the only one here,
                  </strong>
                </h5>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    send out this link to invite someone!
                  </strong>
                </h5>
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
                >
                  <div
                    class="MuiBox-root MuiBox-root-206 Styled(MuiBox)-root-205"
                    title="Copied!"
                  >
                    http://localhost/
                  </div>
                </h6>
              </div>
            </div>
            <div
              class="div-root-207"
            >
              <div
                class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-208 WithStyles(ForwardRef(Card))-root-209 MuiPaper-elevation10 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-239"
                >
                  <div
                    class="div-root-246"
                  >
                    <div
                      class="div-root-247"
                    >
                      <video
                        autoplay=""
                        class="makeStyles-mirroredVideo-241 makeStyles-video-240  "
                        playsinline=""
                      />
                    </div>
                    <div
                      class="div-root-248"
                    >
                      <div
                        class="div-root-249"
                      >
                        <div
                          class="div-root-250"
                        >
                          <svg
                            viewBox="0 0 100 100"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="50"
                              cy="50"
                              fill="#67e4a6"
                              r="NaN"
                            />
                            <circle
                              cx="50"
                              cy="50"
                              fill-opacity="0"
                              r="NaN"
                              stroke="white"
                              stroke-opacity="0.5"
                              stroke-width="4"
                            />
                          </svg>
                        </div>
                      </div>
                      <span>
                        (You)
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: gray;"
      >
        <div
          class="MuiBox-root MuiBox-root-160"
        >
          <div
            class="MuiBox-root MuiBox-root-161"
          >
            <div
              class="div-root-162"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  Looks like you're the only one here,
                </strong>
              </h5>
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  send out this link to invite someone!
                </strong>
              </h5>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
              >
                <div
                  class="MuiBox-root MuiBox-root-206 Styled(MuiBox)-root-205"
                  title="Copied!"
                >
                  http://localhost/
                </div>
              </h6>
            </div>
          </div>
          <div
            class="div-root-207"
          >
            <div
              class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-208 WithStyles(ForwardRef(Card))-root-209 MuiPaper-elevation10 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-239"
              >
                <div
                  class="div-root-246"
                >
                  <div
                    class="div-root-247"
                  >
                    <video
                      autoplay=""
                      class="makeStyles-mirroredVideo-241 makeStyles-video-240  "
                      playsinline=""
                    />
                  </div>
                  <div
                    class="div-root-248"
                  >
                    <div
                      class="div-root-249"
                    >
                      <div
                        class="div-root-250"
                      >
                        <svg
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="50"
                            cy="50"
                            fill="#67e4a6"
                            r="NaN"
                          />
                          <circle
                            cx="50"
                            cy="50"
                            fill-opacity="0"
                            r="NaN"
                            stroke="white"
                            stroke-opacity="0.5"
                            stroke-width="4"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      (You)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Chat Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
        >
          <div
            class="div-root-255"
          >
            <div
              class="div-root-256"
            />
            <div
              class="div-root-257"
            >
              <form>
                <input
                  class="input-root-258"
                  value=""
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
      >
        <div
          class="div-root-255"
        >
          <div
            class="div-root-256"
          />
          <div
            class="div-root-257"
          >
            <form>
              <input
                class="input-root-258"
                value=""
              />
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots DraggableSplitWrapper Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-274"
        >
          <div
            class="MuiBox-root MuiBox-root-275"
          >
            <div
              class="MuiBox-root MuiBox-root-276"
            >
              <div
                class="MuiBox-root MuiBox-root-279 Styled(MuiBox)-root-277 Styled(MuiBox)-root-278"
              >
                <div
                  class="MuiBox-root MuiBox-root-280"
                >
                  hi
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-281"
              >
                <div
                  class="div-root-282 div-root-283"
                  width="5"
                />
              </div>
              <div
                class="MuiBox-root MuiBox-root-285 Styled(MuiBox)-root-277 Styled(MuiBox)-root-284"
              >
                <div
                  class="MuiBox-root MuiBox-root-286"
                >
                  hi
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiBox-root MuiBox-root-274"
      >
        <div
          class="MuiBox-root MuiBox-root-275"
        >
          <div
            class="MuiBox-root MuiBox-root-276"
          >
            <div
              class="MuiBox-root MuiBox-root-279 Styled(MuiBox)-root-277 Styled(MuiBox)-root-278"
            >
              <div
                class="MuiBox-root MuiBox-root-280"
              >
                hi
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-281"
            >
              <div
                class="div-root-282 div-root-283"
                width="5"
              />
            </div>
            <div
              class="MuiBox-root MuiBox-root-285 Styled(MuiBox)-root-277 Styled(MuiBox)-root-284"
            >
              <div
                class="MuiBox-root MuiBox-root-286"
              >
                hi
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots ErrorPage Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-65"
          >
            Oops... The link you are trying to reach cannot be found
          </div>
          <div
            class="MuiBox-root MuiBox-root-66"
          >
            <a
              href="/"
            >
              Go Home
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body1"
      >
        <div
          class="MuiBox-root MuiBox-root-65"
        >
          Oops... The link you are trying to reach cannot be found
        </div>
        <div
          class="MuiBox-root MuiBox-root-66"
        >
          <a
            href="/"
          >
            Go Home
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
